Development version
===================
- REMOVED: RegexConverter. Unused and undocumented.

- REMOVED: wsgi_app_id config key. Unused.


Version 0.5.5 - June 2nd, 2010
==============================
- All .ext packages were moved to separate releases. Tipfy is again a single
  file with a single dependency (Werkzeug), as it was in the beginning.


Version 0.5.4 - May 27, 2010
============================
Bug fix release following 0.5.3.

- REMOVED 'pre_run_app' hook. Use post_make_app instead:

    def post_make_app(self, app):
        # Wrap the callable, so we keep a reference to the app...
        app.wsgi_app = my_middleware(app.wsgi_app)
        # ...and return the original app.
        return app

- IMPROVED tipfy.ext.appstatts and tipfy.ext.debugger: middleware is set on
  'post_make_app'.


Version 0.5.3 - May 27, 2010
============================

Backwards compatibility warnings
--------------------------------

- ADDED: RequestHandler.__init__(app, request), setting references to current
  WSGIApplication and Request in the handler. If you implemented __init__() on
  RequestHandler, please update it to accept these arguments:

    class MyRequestHandler(RequestHandler):
        def __init__(self, app, request):
            super(MyRequestHandler, self).__init__(app, request)
            ...

  We now have access to the URL rule and rule arguments that matched on
  __init__(), and can read app configuration without relying on local.

- CHANGED: the signature of RequestHandler.dispatch(), as a consequence of
  adding __init__() to the handler class. Request method and rule arguments
  are taken from the request set on __init__().

- REMOVED: tipfy.ext.session.MessagesMixin.set_form_error(). It required
  i18n, which requires Babel. Sessions should not depend on i18n. Now they
  don't. Please implement it on a separate mixin or base handler if you used
  it.

- We're now slowly getting rid of globals and local is the first target, as it